# folk-engine

./: .gitignore  .gitmodules  CMakeLists.txt  FolkEngine.cpp  LICENSE  README.md  bin2c.py  docstyle.txt  imgui.ini  shaderc.cmake  todo  todo.md
examples/: CMakeLists.txt  audio_example.cpp  audio_samples.txt  basic_example.cpp  basic_setup.cpp  behavior_tree_example.cpp  demo.cpp  fs_default.sc  hello-audio.cpp  hello-bgfx.cpp  hello_opengl.cpp  hello_world.cpp  input_example.cpp  script_example.cpp  triangle.cpp  vs_default.sc
include/folk/: ai.hpp  audio.hpp  debug.hpp  engine.hpp  error.hpp  folk.hpp  input.hpp  log.hpp  math.hpp  node.hpp  render.hpp  scene.hpp  script.hpp  simulation.hpp
include/folk/ai/: behavior_tree.hpp  behavior_tree_component.hpp
include/folk/audio/: al.hpp  al_buffer.hpp  al_source.hpp  audio.hpp  audio_clip.hpp  audio_listener_component.hpp  audio_source_component.hpp  open_al.hpp
include/folk/core/: engine.hpp  error.hpp  exception_handler.hpp  game.hpp  log.hpp  resource.hpp
include/folk/engine/: engine.hpp  error.hpp
include/folk/input/: binding_map_sink.hpp  cast.hpp  common.hpp  connection.hpp  enums.hpp  input.hpp  input_action.hpp  input_action_handle.hpp  input_action_manager.hpp  input_action_registry.hpp  input_callback_manager.hpp  input_callback_registry.hpp  input_code.hpp  input_event_dispatcher.hpp  input_event_manager.hpp  input_event_queue.hpp  input_manager.hpp  input_registry.hpp  input_window_handle.hpp  key.hpp  mouse_button.hpp
include/folk/math/: matrix.hpp  vector.hpp
include/folk/render/: camera_component.hpp  common.hpp  draw_mode.hpp  gl.hpp  gl_buffer.hpp  gl_call.hpp  gl_handle.hpp  gl_object.hpp  gl_shader.hpp  gl_shader_program.hpp  gl_texture.hpp  gl_uniform.hpp  gl_vertex_array.hpp  image.hpp  immediate_geometry.hpp  index_types.hpp  material.hpp  mesh.hpp  render.hpp  renderer.hpp  shader.hpp  texture.hpp  uniform.hpp  uniform_type.hpp  vertex_array.hpp  vertex_attribute.hpp  vertex_types.hpp  visual.hpp  visual_component.hpp
include/folk/scene/: component_ptr.hpp  entity_handle.hpp  node.hpp  scene.hpp  scene_graph_node.hpp  transform_component.hpp
include/folk/script/: script.hpp  script_component.hpp
include/folk/simulation/: simulation.hpp
include/folk/utils/: deleter.hpp  exception_handler.hpp  library_call.hpp  no_except_function_wrapper.hpp  object_handle.hpp  object_manager.hpp  reference_counting.hpp  simple_queue.hpp  simple_set.hpp  source_location.hpp  thread_safe_counter.hpp  vector.hpp
include/folk/window/: glfw.hpp  glfw_call.hpp  window_handle.hpp  window_manager.hpp
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  al.cpp  al_buffer.cpp  al_source.cpp  alc.cpp  alc.hpp  audio_clip.cpp  audio_error.hpp  audio_manager.cpp  audio_manager.hpp  audio_source_component.cpp  drlib_impl.cpp  module.hpp  open_al.cpp  open_al.hpp  open_alc.cpp  open_alc.hpp  sources.cmake
src/core/: CMakeLists.txt  common.hpp  engine.cpp  engine.hpp  engine_singleton.cpp  engine_singleton.hpp  error.cpp  exception_handler.cpp  exception_handler.hpp  game.cpp  log.cpp  log_thread.cpp  log_thread.hpp  main.cpp  main.hpp  module.hpp  resource.cpp  sources.cmake
src/debug/: CMakeLists.txt  log.cpp  log.hpp  performance_monitor.cpp  performance_monitor.hpp  sources.cmake
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp  engine_module.cpp  engine_module.hpp  engine_singleton.cpp  engine_singleton.hpp  main.cpp  main.hpp
src/exception/: CMakeLists.txt  module.cpp  module.hpp
src/input/: CMakeLists.txt  cast.hpp  input.cpp  input_action.cpp  input_action_handle.cpp  input_action_manager.cpp  input_action_registry.cpp  input_callback_manager.cpp  input_event_dispatcher.cpp  input_event_manager.cpp  input_event_queue.cpp  input_event_queue.hpp  input_initializer.hpp  input_manager.cpp  input_manager.hpp  input_registry.cpp  input_window_handle.cpp  module.cpp  module.hpp  sources.cmake  utils.hpp
src/math/: CMakeLists.txt  matrix.cpp  sources.cmake
src/render/: CMakeLists.txt  bgfx_callback_handler.cpp  bgfx_callback_handler.hpp  camera_component.cpp  common.hpp  default_shader.cpp  default_shader.hpp  default_shader_source.h  gl.cpp  gl_buffer.cpp  gl_call.cpp  gl_shader.cpp  gl_shader_program.cpp  gl_texture.cpp  gl_uniform.cpp  gl_vertex_array.cpp  image.cpp  image.hpp  immediate_geometry.cpp  material.cpp  material_data.hpp  mesh.cpp  mesh_data.hpp  module.cpp  module.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  rendering_window_handle.cpp  rendering_window_handle.hpp  shader.cpp  shader_data.hpp  shader_loader.cpp  shader_loader.hpp  shader_src.hpp  sources.cmake  texture.cpp  uniform_type.cpp  uniform_type_info.cpp  (+6 more)
src/render/shaders/: fs_default.h  fs_default.sc  shaderc.sh  vs_default.h
src/render/shaders/glsl/: fs_basic.h  vs_basic.h
src/render/shaders/spirv/: fs_basic.h  vs_basic.h
src/scene/: CMakeLists.txt  entity_handle.cpp  module.cpp  module.hpp  node.cpp  node_template_functions.hpp  scene.cpp  scene_graph_node.cpp  scene_graph_node.hpp  scene_manager.cpp  scene_manager.hpp  sources.cmake  transform_component.cpp
src/script/: CMakeLists.txt  script_component.cpp  sources.cmake
src/simulation/: CMakeLists.txt  module.hpp
src/thread/: CMakeLists.txt  manager_thread.cpp  manager_thread.hpp  thread_safe.cpp  thread_safe.hpp
src/utils/: CMakeLists.txt  coroutine.hpp  delta_clock.cpp  delta_clock.hpp  exception_handler.cpp  library_call.hpp  object_pool.hpp  performance_monitor.cpp  performance_monitor.hpp  processing_queue.hpp  raii_thread.hpp  scoped_initializer.hpp  singleton.hpp  source_location.cpp  sources.cmake  update_listener.hpp
src/window/: CMakeLists.txt  glfw_call.cpp  glfw_call.hpp  module.cpp  module.hpp  sources.cmake  window_handle.cpp  window_manager.cpp  window_manager.hpp  windowing_system.cpp  windowing_system.hpp
test/: CMakeLists.txt  catch_main.cpp  core.cpp  math.cpp  utils.cpp
