add_custom_target(folk_examples ALL)

function(add_example TARGETNAME FILENAME)
    add_executable(${TARGETNAME} ${FILENAME})
    set_property(TARGET ${TARGETNAME} PROPERTY FOLDER examples)
    target_link_libraries(${TARGETNAME} folk_engine)
    add_dependencies(folk_examples ${TARGETNAME})
endfunction()

add_example(basic_example basic_example.cpp)
add_example(input_example input_example.cpp)
add_example(audio_example audio_example.cpp)
add_example(script_example script_example.cpp)
add_example(behavior_tree_example behavior_tree_example.cpp)
add_example(folk_demo demo.cpp)
add_example(triangle triangle.cpp)