add_library(folk_engine STATIC)
set_property(TARGET folk_engine PROPERTY FOLDER lib)
target_compile_features(folk_engine PUBLIC cxx_std_17)

target_include_directories(folk_engine PUBLIC ../include)
target_link_libraries(folk_engine PUBLIC entt OpenAL glm glad glfw)
target_link_libraries(folk_engine PRIVATE cxxopts dr_libs stb_image)

add_subdirectory(audio)
add_subdirectory(core)
add_subdirectory(render)
add_subdirectory(scene)
add_subdirectory(utils)
add_subdirectory(window)
add_subdirectory(input)
add_subdirectory(math)
add_subdirectory(script)